<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="registration_pin_title">Activate Open Banking</string>

    <!--Terms & Conditions-->
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="accept">I AGREE</string>
    <string name="terms_conditions_title">Please read these Terms &amp; Conditions carefully</string>
    <string name="dummy_terms_conditions">1. Definitions\n1.1 Annual Fee the annual fee applicable to the Card as set out in clause 3.1 or such other amount as may be specified from time to time.\n\n1.2 Card The KFH - Bahrain Visa Card issued to you.\n\n1.3 Cards The KFH - Bahrain Visa Card and any Supplementary Card issued at your request.\n\n1.4 Card Account the account maintained by us for your use of the Card and subject to these Terms and Conditions.\n\n1.5 Cardholder - The person in whose name the Card Account was opened.\n\n1.6 Card Tansactions - The purchase of goods or servies or obtaining Cash Advances by using th eCard, the Card’s number of the PIN or in any other manner authorised by the card holder.</string>
    <!--Terms & Conditions-->
    <string name="secure"><b>Open Banking</b> is the secure way to give providers access to your financial information &amp; accounts.</string>
    <string name="secure2"></string>
    <string name="secure3">Get started by accepting the terms &amp; conditions</string>

    <!--    -->
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>

    <!-- Dashboard -->
    <string name="dashboard_welcome_msg">Welcome to\nTarabut Gateway Open Banking</string>
    <!-- Dashboard -->

</resources>