<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarTermsAndConditions"
            layout="@layout/component_toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_outer_vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_outer_vertical" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_logo_aab"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/toolbarTermsAndConditions" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TextMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:text="@string/secure"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subTitle"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/secure2"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ScrollView
            android:id="@+id/termScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/footerTitle"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/subTitle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/termsText"
                style="@style/TextBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_terms_conditions"
                android:textColor="@color/dark_blue" />
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/footerTitle"
            style="@style/TextSmallest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:includeFontPadding="false"
            android:text="@string/secure3"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintBottom_toTopOf="@+id/btnAccept" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAccept"
            style="@style/ButtonSolidTurquoise"
            android:text="@string/accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_start"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>